Fix log assertion in BeanOutputConverterTest to use Java 17
Updated the test to assert log size explicitly before accessing the first log entry. This ensures the test is more robust and avoids potential issues with accessing logs unexpectedly.

Signed-off-by: Konstantin Pavlov <{ID}+{username}@users.noreply.github.com>